Changed ZonedDateTime to long\nMade backtest work