@@ -2,14 +2,15 @@ package com.bicycle.client.shoonya.api.symbol;
 
 import com.bicycle.client.shoonya.api.model.ShoonyaExchange;
 import com.bicycle.client.shoonya.api.model.ShoonyaSymbol;
+import lombok.RequiredArgsConstructor;
+import lombok.SneakyThrows;
+
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
 import java.util.Collection;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
-import lombok.RequiredArgsConstructor;
-import lombok.SneakyThrows;
 
 @RequiredArgsConstructor
 public class ShoonyaHttpSymbolDataLoader implements ShoonyaSymbolDataLoader {
@@ -18,7 +19,8 @@ public class ShoonyaHttpSymbolDataLoader implements ShoonyaSymbolDataLoader {
     @SneakyThrows
     @SuppressWarnings("unused") 
     public Collection<ShoonyaSymbol> loadByShoonyaExchange(ShoonyaExchange shoonyaExchange) {
-        final ZipInputStream zis = new ZipInputStream(new URL("https://api.shoonya.com/" + shoonyaExchange.name() + "_symbols.txt.zip").openStream());
+        final URI uri = URI.create("https://api.shoonya.com/" + shoonyaExchange.name() + "_symbols.txt.zip");
+        final ZipInputStream zis = new ZipInputStream(uri.toURL().openStream());
         final ZipEntry zipEntry = zis.getNextEntry();
         final BufferedReader reader = new BufferedReader(new InputStreamReader(zis));
         return reader.lines()
